--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,7 +1,8 @@
 /* stylelint-disable */
 header .header-nav-wrapper {
   background-color: var(--background-color);
-  width: 100%;
+  /* background-color: black; */
+  /* width: 100%; */
   z-index: 20;
   position: fixed;
   top: 40px;
