--- a/styles/styles.css
+++ b/styles/styles.css
@@ -738,4 +738,17 @@ h2#not-a-customer-yetyour-welcome-offer {
 
 h2#not-a-customer-yetyour-welcome-offer + p + p {
   font-size: 12px;
+  
+}
+
+h2#the-spirit-of-zurich-in-your-coffee {
+  font-weight: 700;
+  letter-spacing: 1px;
+  font-size: 20px;
+  line-height: 24px;
+  line-height: 160%;
+}
+
+.section.columns-container {
+  background: linear-gradient(359deg, #D1DBE1 0%, #F0D2BB 58.36%, #F2D3AB 99%);
 }
