--- a/blocks/carousel/carousel.css
+++ b/blocks/carousel/carousel.css
@@ -44,7 +44,7 @@
 }
 
 .carousel .carousel-slide-image {
-  width: 65%;
+  width: 100%;
 }
 
 @media (width <= 768px) {
@@ -198,4 +198,9 @@
   .carousel .carousel-slide .carousel-slide-content[data-align="justify"] {
     --slide-content-width: auto;
   }
+}
+
+.carousel .carousel-slide-image {
+  width: 100%;
+  height: 300px;
 }
