--- a/blocks/recommended-products/recommended-products.css
+++ b/blocks/recommended-products/recommended-products.css
@@ -25,7 +25,6 @@
 
 .recommended-products .slider-item {
   box-sizing: border-box;
-  padding: 12px;
   flex: 0 0 auto;
   max-width: calc(100% / 1);
 }
@@ -87,7 +86,7 @@
 }
 
 .recommended-products .slider-text {
-  background-color: var(--color-neutral-50);
+  /* background-color: var(--color-neutral-50); */
   border-radius: 5px;
   text-align: center;
   margin-top: 5px;
@@ -186,4 +185,15 @@
   .recommended-products .slider-container[data-step="sm"] .slider-item {
       max-width: 238px;
   }
+}
+
+.recommended-products .slider-item picture img {
+  border-radius: 5px;
+  width: 150px;
+  height: 150px;
+  object-fit: contain;
+  padding: 20px;
+  background: #fff;
+  border-radius: 10px;
+  margin: 20px;
 }
