--- a/blocks/recommended-products/recommended-products.css
+++ b/blocks/recommended-products/recommended-products.css
@@ -44,6 +44,7 @@
   color: var(--color-neutral-50);
   background: var(--color-black-100);
   cursor: pointer;
+  border-radius: 5px;
 }
 
 .recommended-products .slider-control.prev {
@@ -54,11 +55,9 @@
   right: 0;
 }
 
-.recommended-products .slider-control.prev.disabled,
-.recommended-products .slider-control.next.disabled {
-  background-color: var(--color-neutral-200);
+.recommended-products .slider-control.prev.disabled, .recommended-products .slider-control.next.disabled {
+  background-color: #000000;
 }
-
 .recommended-products .slider-item img {
   -webkit-user-drag: none;
   -khtml-user-drag: none;
@@ -193,7 +192,8 @@
   height: 150px;
   object-fit: contain;
   padding: 20px;
-  background: #fff;
+  /* background: #fff; */
   border-radius: 10px;
   margin: 20px;
+  mix-blend-mode: multiply;
 }
